boton CANCELAR añadido en cu5

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -477,7 +477,7 @@
 
                         <div class="action-buttons-container" style="justify-content: center;">
                             <button type="button" id="btn-limpiar-salir-estado" class="btn-submit"
-                                style="background-color: #0056b3;">Limpiar y Salir</button>
+                                style="background-color: #0056b3;">CANCELAR</button>
                         </div>
                     </div>
                 </div>
