cu04 añadido y mejoras varias, falta cu15

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -498,16 +498,16 @@
                                     <div class="form-grid"
                                         style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); align-items: end;">
                                         <div class="form-group">
-                                            <label for="reserva-fecha-desde">Desde fecha</label>
+                                            <label for="reserva-fecha-desde">Desde Fecha</label>
                                             <input type="date" id="reserva-fecha-desde" required>
                                         </div>
                                         <div class="form-group">
-                                            <label for="reserva-fecha-hasta">Hasta fecha</label>
+                                            <label for="reserva-fecha-hasta">Hasta Fecha</label>
                                             <input type="date" id="reserva-fecha-hasta" required>
                                         </div>
                                         <div class="form-group">
                                             <button type="submit" id="btn-buscar-reserva" class="btn-submit"
-                                                style="background-color: #0056b3;">BUSCAR</button>
+                                                style="background-color: #0056b3;">Buscar</button>
                                         </div>
                                     </div>
                                 </form>
